tests/baselines/reference/exportDeclarationsInAmbientNamespaces2.errors.txt
exportDeclarationsInAmbientNamespaces2.ts(6,23): error TS1194: Export declarations are not permitted in a namespace.


==== exportDeclarationsInAmbientNamespaces2.ts (1 errors) ====
    declare module "mod" {
        export var x: number;
    }
    
    declare namespace N {
        export { x } from "mod"; // Error
                          ~~~~~
!!! error TS1194: Export declarations are not permitted in a namespace.
    }
    
    